--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,14 +34,14 @@ jobs:
 
       - name: Rename files
         run: |
-          mv UIKitLivePreview.zip UIKitLivePreview.xcframework.zip
-          mv UIKitLivePreview.sha256 UIKitLivePreview.xcframework.sha256
+          mv UIKitLivePreview.zip UIKitLivePreview.kush.zip
+          mv UIKitLivePreview.sha256 UIKitLivePreview.kush.sha256
 
       - name: Upload XCFramework archive
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            UIKitLivePreview.xcframework.zip
-            UIKitLivePreview.xcframework.sha256
+            UIKitLivePreview.kush.zip
+            UIKitLivePreview.kush.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
